# doubled-graph-mcp

./: .gitignore  ARTICLE.md  INDEX.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: doubled-graph.yml
docs/: CHANGELOG.md  HOOKS.md  METHODOLOGY_README.md  SPEC.md  TOOLS.md
for-ai-existing-project/: README.md
for-ai-maintenance/: README.md
for-ai-new-project/: README.md
for-humans/: FAQ.md  deep-dive.md  getting-started.md
methodology/: README.md  approval-checkpoints.md  artifacts.md  auto-scaling.md  drift-and-priority.md  principles.md  roles.md  tools.md  workflow.md
methodology/language-adapters/: _template.md  csharp.md  go.md  java.md  python.md  rust.md  swift.md  typescript.md
methodology/runtime-adapters/: _template.md  claude-code.md  codex.md  continue.md  cursor.md  local-llm.md  windsurf.md
prompts/maintenance/: on-after-edit.md  on-before-edit.md  on-drift-detected.md  on-user-manual-edit.md
prompts/migrate-existing-project/: 00-entry-prompt.md  01-discover.md  02-reconstruct-intent.md  03-draft-plan.md  04-markup-codebase.md  05-verification-and-logs.md  06-validation-gates.md
prompts/new-project/: 00-entry-prompt.md  01-intent-interview.md  02-requirements.md  03-technology.md  04-development-plan.md  05-verification-plan.md  06-generate.md  07-post-init-sync.md
src/doubled_graph/: __init__.py  __main__.py  cli.py  config.py  hooks_installer.py  server.py  setup.py
src/doubled_graph/graphs/: crossref.py  declared.py
src/doubled_graph/integrations/: cgc.py  grace_cli.py
src/doubled_graph/policy/: phase.py
src/doubled_graph/storage/: paths.py
src/doubled_graph/tools/: _meta.py  analyze.py  context.py  detect_changes.py  impact.py
tests/: test_smoke.py
